--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Crystal Collector</title>
+  <title>Giftastic</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">  
   <!-- CSS -->
   <link rel="stylesheet" href="css/reset.css">
